--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/png" href="./images/icon.png" />
     <title>Calculator</title>
 </head>
+
 <body>
   <div class="calculator">
     <input type="text" id="display" readonly>
@@ -37,6 +38,11 @@
   </div>
 
   <div id="desmos-calculator" style="width: 600px; height: 400px;"></div>
+
+  <footer>
+    <h4>created by <a href="https://github.com/ethanwong888" rel="noopener noreferrer nofollow" target="_blank">ethan wong</a></h4>
+  </footer>
+  
   <script src="script.js"></script>
   <script src="https://www.desmos.com/api/v1.8/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>
   <script>
